--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "valid-url": "^1.0.9"
   },
   "name": "project-intern",
   "description": "project-internshipGroupX",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
